--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Peluquería-Barbería{% endblock %}</title>
+    <title>{% block title %}Parra-Barber{% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
 
     <header>
-        <h1>Peluquería-Barbería</h1>
+        <h1>Parra-Barber</h1>
         <img src="{{ url_for('static', filename='img/logo.jpg') }}" alt="Logo" class="logo">
         <nav>
             <ul>
