--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -5,11 +5,11 @@
     <!-- Dirección a la izquierda -->
     <div class="direccion">
         <h2>Contacto</h2>
-        <p>José Ángel Castaño Lozano</p>
+        <p>JCM Castaño </p>
         <p>Fuentes de León (Badajoz)</p>
-        <p>Calle Fernando Zamacola</p>
+        <p>Calle Ancha</p>
         <p>CP 06280</p>
-        <p>635487063</p>
+        <p>999 999 999</p>
     </div>
 
     <!-- Mapa de Google Maps a la derecha -->
