--- a/static/style.css
+++ b/static/style.css
@@ -283,22 +283,65 @@ footer {
     border-bottom: none;
 }
 
-/*Estilos fotos.html*/
+/* Estilos para la galería */
 .galeria {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 15px;
     padding: 20px;
     justify-items: center;
-    margin-bottom:150px;
+    margin-bottom: 150px;
+}
+
+.foto {
+    width: 100%;
+    height: 250px; /* Establece una altura fija para las fotos */
+    overflow: hidden; /* Asegura que el contenido que sobresalga sea ocultado */
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
 }
 
 .foto img {
     width: 100%;
-    max-height: 250px;
-    object-fit: cover;
-    border-radius: 10px;
-    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.3);
+    height: 100%; /* Las imágenes ocuparán el 100% de la altura de su contenedor */
+    object-fit: cover; /* Asegura que la imagen cubra el área de su contenedor sin distorsionarse */
+    cursor: pointer; /* Indicamos que es una imagen clickeable */
+}
+
+/* Modal */
+.modal {
+    display: none; /* Oculto por defecto */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Fondo oscuro semi-transparente */
+    justify-content: center;
+    align-items: center;
+}
+
+.imagen-ampliada {
+    max-width: 80%; /* Limita el tamaño máximo de la imagen */
+    max-height: 80%;
+    object-fit: contain; /* Hace que la imagen se ajuste sin distorsión */
+}
+
+.cerrar {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 30px;
+    color: white;
+    cursor: pointer;
+}
+
+/* Solo mostrar el modal en pantallas grandes */
+@media (min-width: 768px) {
+    .modal.mostrar {
+        display: flex; /* Solo se muestra si tiene la clase "mostrar" */
+    }
 }
 
 .paginacion {
